--- a/WebApplication1/Areas/webmaster/Views/plantillas/crear.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/plantillas/crear.cshtml
@@ -19,7 +19,8 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Crear Plantillas de email</li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "plantillas", new { area = "webmaster" })" class="text-success">Listado de plantillas</a></li>
+                            <li class="breadcrumb-item active">Crear plantillas de email</li>
                         </ul>
                     </div>
                 </div>
@@ -29,7 +30,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listado", "plantillas", new { area = "webmaster" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
@@ -53,7 +54,7 @@
                             {
                                 @Html.AntiForgeryToken()
                                 <div class="form-group">
-                                    <textarea id="content" rows="15" name="content" class="tinymce"></textarea>
+                                    <textarea required id="content" rows="9" name="content" class="tinymce"></textarea>
                                 </div>
 
                                 <div id="summernote" class="mb-2">
@@ -68,7 +69,7 @@
                                 <div class="form-group mb-0">
                                     <div class="my-3">
                                         <button class="btn btn-primary" type="submit"> <span>Guardar</span></button>
-                                        <a href=""><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
+                                        <a href="@Url.Action("listado", "plantillas", new { area = "webmaster" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                                     </div>
                                 </div>
                             }
@@ -80,7 +81,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listado", "plantillas", new { area = "webmaster" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
