--- a/WebApplication1/Areas/webmaster/Views/suplidores/ver.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/suplidores/ver.cshtml
@@ -19,6 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "suplidores", new { area = "webmaster" })" class="text-success">Listado de suplidores</a></li>
                             <li class="breadcrumb-item active">Ver suplidor</li>
                         </ul>
                     </div>
@@ -29,7 +30,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listado", "suplidores", new { area = "webmaster" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
@@ -44,7 +45,7 @@
                             </div>
                             <div class="col-md-6 mb-1">
                                 <a href="@Url.Action("editar", "suplidores", new { area = "webmaster", editID=Model.viewSupplier.id } )" class="mr-1"><button type="button" class="btn btn-success waves-effect waves-light float-xl-right float-lg-right float-md-left">Editar</button></a>
-                                @*<a href="@Url.Action("agregar",  "suplidores", new { area = "webmaster" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar nuevo</button></a>*@
+                               
                             </div>
                         </div>
                         <div class="form-divider"></div>
@@ -157,7 +158,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listado", "suplidores", new { area = "webmaster" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
