--- a/WebApplication1/Areas/webmaster/Views/comunicaciones/agregarcomentario.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunicaciones/agregarcomentario.cshtml
@@ -20,6 +20,8 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("blog", "comunicaciones", new { area = "webmaster" })" class="text-success">Blog general</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("verblog", "comunicaciones", new { area = "webmaster", blogID = Model.blogID })" class="text-success">Ver blog</a></li>
                             <li class="breadcrumb-item active">Agregar comentario</li>
                         </ul>
                     </div>
@@ -30,7 +32,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("verblog", "comunicaciones", new { area = "webmaster", blogID = Model.blogID })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
@@ -56,14 +58,14 @@
                             <div class="form-group row">
                                 <label for="example-email-input-3" class="col-sm-3 col-form-label">Comentario</label>
                                 <div class="col-sm-9">
-                                    <textarea class="form-control" name="comment" data-toggle="tooltip"
+                                    <textarea maxlength="90" required class="form-control" name="comment" data-toggle="tooltip"
                                               title="Contenido descriptivo del blog"></textarea>
                                     <small class="form-text text-muted">Comentario descriptivo del blog</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Agregar Comentario</button></a>
-                            <a href="@Url.Action("blog", "comunicaciones", new { area="webmaster" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
+                            <a href="@Url.Action("verblog", "comunicaciones", new { area = "webmaster", blogID = Model.blogID })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
                 </div>
@@ -72,7 +74,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("verblog", "comunicaciones", new { area = "webmaster", blogID = Model.blogID })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
