--- a/WebApplication1/Areas/webmaster/Views/comunidades/agregar.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/comunidades/agregar.cshtml
@@ -21,6 +21,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "comunidades", new { area = "webmaster" })" class="text-success">Listado de comunidades</a></li>
                             <li class="breadcrumb-item active">Agregar comunidad</li>
                         </ul>
                     </div>
@@ -31,7 +32,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listado", "comunidades", new { area = "webmaster" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
@@ -56,7 +57,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="40" class="form-control" type="text" value="" name="first_name"
+                                    <input maxlength="30" class="form-control" type="text" value="" name="first_name"
                                            data-toggle="tooltip" title="Nombre de la comunidad"
                                            placeholder="Nombre" id="example-email-input" required/>
                                     <small class="form-text text-muted">Nombre de la comunidad</small>
@@ -105,14 +106,14 @@
                             <div class="form-group row">
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Descripción</label>
                                 <div class="col-sm-9">
-                                    <textarea required class="form-control" rows="3" name="description"
+                                    <textarea maxlength="90" required class="form-control" rows="3" name="description"
                                               data-toggle="tooltip" title="Descripción de la comunidad"
                                               placeholder="Descripción"></textarea>
                                     <small class="form-text text-muted">Descripción de la comunidad</small>
                                 </div>
                             </div>
                             <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
-                            <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
+                            <a href="@Url.Action("listado", "comunidades", new { area = "webmaster" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         </div>
                     }
                 </div>
@@ -121,7 +122,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listado", "comunidades", new { area = "webmaster" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
