--- a/WebApplication1/Areas/webmaster/Views/suplidores/listado.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/suplidores/listado.cshtml
@@ -45,7 +45,7 @@
                                     <input type="text" id="example-input1-group2" name="searchStr" value="@Model.searchStr"
                                            class="form-control" placeholder="Escribe palabra clave para la búsqueda">
                                     <span class="input-group-append">
-                                        <button type="submit" class="btn btn-effect-ripple btn-primary"><i class="fas fa-search"></i> Buscar por Nombre de contacto </button>
+                                        <button type="submit" class="btn btn-effect-ripple btn-primary"><i class="fas fa-search"></i> Buscar por nombre</button>
                                     </span>
                                 </div>
                                 <div class="input-group col-md-6">
@@ -79,7 +79,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("panel", "control", new { area = "webmaster" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
@@ -157,17 +157,21 @@
                                                         <i class="mdi mdi-star text-warning"></i>
                                                         break;
                                                     default:
-                                                        <i>No Rated</i>
+                                                        <i>Sin valorar</i>
                                                         break;
 
                                                 }
                                             </td>
                                             <td class="text-center">
-                                                <button type="button"
-                                                        class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1">
-                                                    Activar
-                                                </button>
-                                                <button type="button" class="btn btn-dark waves-effect waves-light btn-sm mr-1 mb-1">Desactivar</button>
+                                                @if (item.status == 1)
+                                                {
+                                                    <button onclick="onActivateSupplier(this)" data-id="@item.id" type="button" class="btn btn-primary waves-effect waves-light btn-sm mb-1">Activado</button>
+
+                                                }
+                                                else
+                                                {
+                                                    <button onclick="onActivateSupplier(this)" data-id="@item.id" type="button" class="btn btn-danger waves-effect waves-light btn-sm">Desactivado</button>
+                                                }
                                                 <a href="@Url.Action("ver", "suplidores", new { area = "webmaster", viewID = item.id })">
                                                     <button type="button" class="btn btn-info waves-effect waves-light btn-sm mb-1">
                                                         Ver comentarios
@@ -210,7 +214,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("panel", "control", new { area = "webmaster" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
