--- a/WebApplication1/Areas/webmaster/Views/tecnico/soporte.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/tecnico/soporte.cshtml
@@ -29,7 +29,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("panel", "control", new { area = "webmaster" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
@@ -112,7 +112,7 @@
                                             @*<textarea class="form-control" rows="10" placeholder="Mensajes"></textarea>*@
                                         </div>
                                         <div class="col-sm-12">
-                                            <input class="form-control form-control-lg" type="text" 
+                                            <input required class="form-control form-control-lg" type="text" 
                                                    placeholder="Escribir mensaje"
                                                    id="txtMessage">
                                         </div>
@@ -141,7 +141,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("panel", "control", new { area = "webmaster" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
