--- a/WebApplication1/Areas/webmaster/Views/titulares/listado.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/titulares/listado.cshtml
@@ -25,22 +25,59 @@
                 </div>
             </div>
         </div>
-        <!-- end page title end breadcrumb -->
         <div class="row">
             <div class="col-lg-12">
                 <div class="card m-b-30">
                     <div class="card-body">
-                        <div class="input-group">
-                            <input type="text" id="search-input" name="searchStr" value="@Model.searchStr"
-                                   class="form-control" placeholder="Buscar por nombre o apellido...">
-                            <span class="input-group-append">
-                                <button type="button" id="search-button" class="btn btn-effect-ripple btn-primary"><i class="fas fa-search"></i> Buscar </button>
-                            </span>
+                        <div class="row form-material">
+                            @using (Html.BeginForm("SeacrhResult", "titulares", FormMethod.Post,
+                                new
+                                {
+                                    id = "searchCommunityForm",
+                                    @class = "search-form",
+                                    area = "webmaster",
+                                    enctype = "multipart/form-data"
+                                }))
+                            {
+                                @Html.AntiForgeryToken()
+                                <div class="input-group col-md-6 mb-2">
+                                    <input type="text" id="example-input1-group2" name="searchStr" value="@Model.searchStr"
+                                           class="form-control" placeholder="Escribe palabra clave para la búsqueda">
+                                    <span class="input-group-append">
+                                        <button type="submit" class="btn btn-effect-ripple btn-primary"><i class="fas fa-search"></i> Buscar</button>
+                                    </span>
+                                </div>
+                                if (Model.communityList.Count > 0)
+                                {
+                                    <div class="input-group col-md-6">
+                                        <label class="col-form-label">Filtrar por comunidad</label>
+                                        <div class="col-sm-6 col-md-8">
+                                            <select class="form-control" id="id-search-category"
+                                                    name="searchCommunityId"
+                                                    onchange="onSearchTitularCommunity()">    
+                                                <option value="0">Sin comunidad</option>
+                                                @foreach (var item in Model.communityList)
+                                                {
+                                                    if (Convert.ToInt64(Session["WM_selectedComm"]) == item.id)
+                                                    {
+                                                        <option selected value="@item.id">@item.first_name</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="@item.id">@item.first_name</option>
+                                                    }
+                                                }
+                                            </select>
+                                        </div>
+                                    </div>
+                                }
+                            }
                         </div>
                     </div>
                 </div>
             </div>
         </div><!--end row-->
+        <!-- end page title end breadcrumb -->      
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
@@ -50,6 +87,17 @@
         <!-- end back button -->
 
         <div class="row">
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card m-b-30">
                     <div class="card-body">
@@ -61,12 +109,19 @@
 
                                 @if (Model.communityList.Count > 0)
                                 {
-                                <a href="@Url.Action("agregar", "titulares", new { area = "webmaster" })">
-                                    <button type="button"
-                                            class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1">
-                                        Agregar nuevo
+                                    <a href="@Url.Action("agregar", "titulares", new { area = "webmaster" })">
+                                        <button type="button"
+                                                class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1">
+                                            Agregar nuevo
+                                        </button>
+                                    </a>
+
+                                    <button class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1"
+                                            type="button" id="import_csv_btn">
+                                        Importar
                                     </button>
-                                </a>
+
+                                    <a href="#" onclick="onExportCSV()"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1">Exportar</button></a>
                                 }
                                 else
                                 {
@@ -76,34 +131,14 @@
                                             Agregar nuevo
                                         </button>
                                     </a>
-                                }
-                                
 
-                                @if (Model.communityList.Count > 0)
-                                {
-                                    <button class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1"
-                                            type="button" id="import_csv_btn">
-                                        Importar
-                                    </button>
-                                }
-                                else
-                                {
                                     <button disabled class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1"
                                             type="button" id="">
                                         Importar
                                     </button>
-                                }
 
-                                @if (Model.titularList.Count > 0)
-                                {
-                                    <a href="#" onclick="onExportCSV()"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1">Exportar</button></a>
-                                }
-                                else
-                                {
                                     <a><button disabled type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mr-1 mb-1">Exportar</button></a>
                                 }
-
-
 
                             </div>
                         </div>
@@ -125,7 +160,7 @@
                                             <td>@item.first_name1</td>
                                             <td>@item.last_name1</td>
                                             <td>@item.email</td>
-                                           
+
                                             <td class="text-center">
                                                 @if (item.is_active == true)
                                                 {
@@ -159,10 +194,11 @@
                                                         <i class="mdi mdi-lead-pencil"></i>
                                                     </button>
                                                 </a>
-                                                <a href="@Url.Action("listadoTitulos", "titulares", new { area = "webmaster", id = item.id })" 
+                                                <a href="@Url.Action("listadoTitulos", "titulares", new { area = "webmaster", id = item.id })"
                                                    class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
-                                                            data-toggle="tooltip" data-placement="top" title="Comunidades">
-                                                   <i class="mdi mdi-home"></i></a>
+                                                   data-toggle="tooltip" data-placement="top" title="Comunidades">
+                                                    <i class="mdi mdi-home"></i>
+                                                </a>
                                                 <a href="#">
                                                     <button type="button" onclick="onDeleteTitulares(this)" data-id="@item.id"
                                                             class="btn btn-danger waves-effect waves-light btn-sm mb-1"
@@ -175,7 +211,7 @@
 
 
                                             </td>
-                                           
+
                                         </tr>
                                     }
                                 </tbody>
