--- a/WebApplication1/Areas/webmaster/Views/uso/reservados.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/uso/reservados.cshtml
@@ -29,7 +29,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("panel", "control", new { area = "webmaster" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
@@ -50,16 +50,16 @@
                             @Html.AntiForgeryToken()
                             if (Model.uso != null)
                             {
-                                <textarea class="form-control" rows="3" name="derechos" placeholder="">@Model.uso.reservados</textarea>
+                                <textarea required class="form-control" rows="3" name="derechos" placeholder="">@Model.uso.reservados</textarea>
                             }
                             else
                             {
-                                <textarea class="form-control" rows="3" name="derechos" placeholder=""></textarea>
+                                <textarea required class="form-control" rows="3" name="derechos" placeholder=""></textarea>
                             }
 
                             <div class="form-divider"></div>
                             <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
-                            <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
+                            <a href="@Url.Action("panel", "control", new { area = "webmaster" })"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         }
 
                     </div>
@@ -69,7 +69,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("panel", "control", new { area = "webmaster" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
