--- a/WebApplication1/Areas/webmaster/Views/webmaster/ver.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/webmaster/ver.cshtml
@@ -19,6 +19,7 @@
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
+                            <li class="breadcrumb-item"><a href="@Url.Action("listado", "webmaster", new { area = "webmaster" })" class="text-success">Listado de webmasters</a></li>
                             <li class="breadcrumb-item active">Ver webmaster</li>
                         </ul>
                     </div>
@@ -29,7 +30,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listado", "webmaster", new { area = "webmaster" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
@@ -63,7 +64,7 @@
                                 <input class="form-control" type="text" value="@Model.viewAdmin.first_name1"
                                         placeholder="Nombre" id="example-email-input" name="first_name1" readonly
                                         data-toggle="tooltip" title="Nombre del webmaster" />
-                                <small class="form-text text-muted">Nombre del webmaster</small>
+                                @*<small class="form-text text-muted">Nombre del webmaster</small>*@
                             </div>
                         </div>
                         <div class="form-divider"></div>
@@ -73,7 +74,7 @@
                                 <input class="form-control" type="text" value="@Model.viewAdmin.last_name1"
                                         placeholder="Apellido paterno" id="example-email-input" name="last_name1" readonly
                                         data-toggle="tooltip" title="Apellido paterno del webmaster" />
-                                <small class="form-text text-muted">Apellido paterno del webmaster</small>
+                                @*<small class="form-text text-muted">Apellido paterno del webmaster</small>*@
                             </div>
                         </div>
                         <div class="form-divider"></div>
@@ -83,7 +84,7 @@
                                 <input class="form-control" type="text" value="@Model.viewAdmin.mother_last_name1"
                                         placeholder="Apellido materno" id="example-email-input" name="mother_last_name1"
                                         data-toggle="tooltip" title="Apellido materno del webmaster" readonly/>
-                                <small class="form-text text-muted">Apellido materno del webmaster</small>
+                                @*<small class="form-text text-muted">Apellido materno del webmaster</small>*@
                             </div>
                         </div>
                         <div class="form-divider"></div>
@@ -93,7 +94,7 @@
                                 <input class="form-control" type="email" value="@Model.viewAdmin.email"
                                         placeholder="Email" id="example-email-input" name="email"
                                         data-toggle="tooltip" title="Email del webmaster" readonly/>
-                                <small class="form-text text-muted">Email del webmaster</small>
+                                @*<small class="form-text text-muted">Email del webmaster</small>*@
                             </div>
                         </div>
                         <div class="form-divider"></div>
@@ -103,7 +104,7 @@
                                 <input class="form-control" type="password" value="@Model.viewPassword"
                                         placeholder="Contraseña" id="example-password-input" name="password" readonly
                                         data-toggle="tooltip" title="Contraseña utilizada para ingresar al sistema" />
-                                <small class="form-text text-muted">Contraseña utilizada para ingresar al sistema</small>
+                                @*<small class="form-text text-muted">Contraseña utilizada para ingresar al sistema</small>*@
                             </div>
                         </div>
                     </div> 
@@ -113,7 +114,7 @@
         <!-- back button -->
         <div class="row pb-4">
             <div class="col-md-6">
-                <a href="javascript:history.back()"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
+                <a href="@Url.Action("listado", "webmaster", new { area = "webmaster" })"><button type="button" class="btn btn-light waves-effect waves-light"><i class="mdi mdi-keyboard-return"></i> Regresar</button></a>
             </div>
         </div>
         <!-- end back button -->
